# FinPersona-Bench

./: .flake8  .gitignore  README.md  finpersona.html  pyproject.toml  run_experiments.py  run_injection_freq_claude.py  run_long_horizon.py  run_ocean_experiments.py  run_t_callibration.py
agent/: base.py  freq_agent.py  legacy_agent.py  memory_agent.py  ocean_memory_agent.py  ocean_prompts.py  ocean_static_agent.py  prompts.py  schemas.py  static_agent.py
agent/personas/: mbti_profiles.json
analysis/: analyze_injection_freq.py  analyze_injection_freq_claude.py  analyze_ocean_results.py  drift_breakdown.py  effect_sizes.py  injection_freq_analysis.py  numerical_analysis.py  persona_classifier.py  summarize_t_calibration.py
annotation_app/: ANNOTATION_GUIDE.md  README.md  annotation_app.py  annotation_pairs_for_annotator.csv  annotation_pairs_ground_truth.csv  annotation_sample_summary.txt  extract_annotation_samples.py  requirements.txt
envs/: synthetic_market.py
placebo_reinjection_control/: __init__.py  analyze_placebo_results.py  placebo_agent.py  run_placebo_experiment.py
rationale_linguistic_analysis/: rationale_linguistic_analysis.py
simulation/: legacy_runner.py  ocean_runner.py  portfolio_tracker.py  runner.py
tests/: test_agent_manual.py  test_env_logic.py  test_market_environment.py
