[project]
name = "finpersona"
version = "0.1.0"
description = "FinPersona: Modeling MBTI Personality in Financial Trading Agents"
authors = [
    { name = "Ayesha Gull", email = "ayeshaiqbal2592@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas",
    "yfinance",
    "vectorbt",
    "pydantic>=2.0",
    "langchain",
    "langchain-google-genai",
    "langchain-anthropic",
    "langchain-openai",
    "python-dotenv",
    "tqdm",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "mypy",
    "black"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "results*", ".venv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["venv", ".venv", ".git"]
addopts = "-p no:cacheprovider"

[tool.mypy]
cache_dir = "venv/.mypy_cache"
exclude = ["venv", ".venv", "build", "dist"]
ignore_missing_imports = true
incremental = false
